--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  randomizer-service:
+ useritem-api-service:
   image: jentelliekens/python-api-eindproject
   ports:
     - "8000:8000"
